--- a/joshua.Proyecto.TrucoNet/src/formularios/frmOpciones.form
+++ b/joshua.Proyecto.TrucoNet/src/formularios/frmOpciones.form
@@ -52,7 +52,7 @@
                   <Component id="txtNombre" alignment="3" min="-2" max="-2" attributes="0"/>
                   <Component id="jLabel1" alignment="3" min="-2" max="-2" attributes="0"/>
               </Group>
-              <EmptySpace pref="77" max="32767" attributes="0"/>
+              <EmptySpace pref="81" max="32767" attributes="0"/>
               <Group type="103" groupAlignment="3" attributes="0">
                   <Component id="cmdAceptar" alignment="3" min="-2" max="-2" attributes="0"/>
                   <Component id="cmdCancelar" alignment="3" min="-2" max="-2" attributes="0"/>
@@ -80,6 +80,9 @@
       </Events>
     </Component>
     <Component class="javax.swing.JTextField" name="txtNombre">
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="txtNombreActionPerformed"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JLabel" name="jLabel1">
       <Properties>
