--- a/joshua.Proyecto.TrucoNet/src/formularios/frmChatPrevio.form
+++ b/joshua.Proyecto.TrucoNet/src/formularios/frmChatPrevio.form
@@ -66,7 +66,7 @@
                       <Component id="lblOponente" min="-2" max="-2" attributes="0"/>
                       <EmptySpace max="-2" attributes="0"/>
                       <Component id="lblNombreOponente" min="-2" pref="18" max="-2" attributes="0"/>
-                      <EmptySpace min="0" pref="243" max="32767" attributes="0"/>
+                      <EmptySpace min="0" pref="247" max="32767" attributes="0"/>
                   </Group>
                   <Component id="jScrollPane2" max="32767" attributes="0"/>
               </Group>
@@ -102,6 +102,12 @@
       <Properties>
         <Property name="text" type="java.lang.String" value="Listo"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="cmdListoActionPerformed"/>
+      </Events>
+      <AuxValues>
+        <AuxValue name="JavaCodeGenerator_VariableModifier" type="java.lang.Integer" value="9"/>
+      </AuxValues>
     </Component>
     <Component class="javax.swing.JLabel" name="lblOponente">
       <Properties>
