Juego Funcionando. NoQuiero y AlMazo funcionando. Faltan los tantos (Sigue el problema del ChatPrevio)

--- a/joshua.Proyecto.TrucoNet/src/formularios/frmJuego.form
+++ b/joshua.Proyecto.TrucoNet/src/formularios/frmJuego.form
@@ -315,6 +315,9 @@
       <Properties>
         <Property name="text" type="java.lang.String" value="Envido"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="cmdEnvidoActionPerformed"/>
+      </Events>
       <AuxValues>
         <AuxValue name="JavaCodeGenerator_VariableModifier" type="java.lang.Integer" value="9"/>
       </AuxValues>
