--- a/joshua.Proyecto.TrucoNet/src/formularios/frmCrearSala.form
+++ b/joshua.Proyecto.TrucoNet/src/formularios/frmCrearSala.form
@@ -70,7 +70,7 @@
                   <Component id="cmdCrear" alignment="3" min="-2" max="-2" attributes="0"/>
                   <Component id="cmdCancelar" alignment="3" min="-2" max="-2" attributes="0"/>
               </Group>
-              <EmptySpace pref="19" max="32767" attributes="0"/>
+              <EmptySpace max="32767" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
